Fixed css to avoid "jumping"

--- a/collective/ptg/quicksand/resources/iconstyle.css
+++ b/collective/ptg/quicksand/resources/iconstyle.css
@@ -1,7 +1,6 @@
 ul#quicksandbox {
 	list-style-image: none;
 	list-style-type: none;
-	margin: 0px;
 }
 
 .image-grid {
@@ -19,16 +18,13 @@ ul#quicksandbox {
 /* this is important, one can not set the the same on the divs (a bug in quicksand) */
 
 .image-grid li {
-	margin: 0px 10px 10px 0 !important;
 	display: block;
-	border: 1px solid #ccc;
 	float: left;
 	text-align: center;
 	font-family: "Helvetica Neue", sans-serif;
 	line-height: 17px;
 	color: #686f74;
 	overflow: hidden;
-	background: #ddd;
 }
 
 .image-grid li img {
